# Pratibmb

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-desktop.yml  deploy-site.yml  publish-packages.yml
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/ui/: app.js  index.html  style.css
docs/: ARCHITECTURE.md  CLINICAL_USE_CASE.md  HELP.md  build_journal.py  project_journal.docx
docs/launch/: LAUNCH_CHECKLIST.md  LAUNCH_DAY_PLAN.md  blog-post.md  devto-article.md  hacker-news.md  linkedin-post.md  product-hunt.md  reddit-posts.md  social-media-posts.md  twitter-thread.md
docs/launch/instagram/: carousel.html
pratibmb/: __init__.py  cli.py  log.py  models.py  schema.py  server.py
pratibmb/clinical/: __init__.py  patterns.py  sentiment.py  session_brief.py
pratibmb/finetune/: __init__.py  convert.py  format.py  pairs.py  train.py
pratibmb/importers/: __init__.py  base.py  discord.py  facebook.py  gmail.py  imessage.py  instagram.py  telegram.py  twitter.py  whatsapp.py
pratibmb/llm/: __init__.py  chat.py
pratibmb/profile/: __init__.py  context.py  extractor.py  schema.py
pratibmb/rag/: __init__.py  embed.py  retrieve.py
pratibmb/store/: __init__.py  sqlite.py
pratibmb/voice/: __init__.py  extract.py
scripts/: smoke.py
site/: 404.html  CNAME  index.html  install.ps1  install.sh  robots.txt  sitemap.xml  style.css
site/clinical/: clinical.css  clinical.js  index.html
site/clinical/blog/: attachment-from-text.html  circadian-signatures.html  ethics-of-behavioral-data.html  index.html  linguistic-markers-depression.html  self-report-vs-objective.html
tests/: test_chat_cleanup.py  test_discord.py  test_facebook.py  test_finetune.py  test_gmail.py  test_imessage.py  test_instagram.py  test_real_extraction.py  test_schema.py  test_store.py  test_telegram.py  test_twitter.py  test_whatsapp.py
