[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pratibmb"
version = "0.0.1"
description = "Chat with your 10-years-younger self. 100% local."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
authors = [{ name = "Tapas" }]
keywords = ["llm", "local", "privacy", "personal", "rag", "whatsapp"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "llama-cpp-python>=0.3.0",
    "numpy>=1.26",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
pratibmb = "pratibmb.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pratibmb"]
