[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pratibmb"
version = "0.5.0"
description = "Chat with your 10-years-younger self. 100% local."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.9"
authors = [{ name = "Tapas" }]
keywords = ["llm", "local", "privacy", "personal", "rag", "whatsapp"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "llama-cpp-python>=0.3.0",
    "numpy>=1.26",
    "click>=8.1",
    "rich>=13.0",
    "huggingface_hub>=0.20",
    "mlx-lm>=0.18; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]
finetune = ["mlx-lm>=0.18"]
finetune-mlx = ["mlx-lm>=0.18"]
finetune-pytorch = [
    "torch>=2.2",
    "transformers>=4.40",
    "peft>=0.10",
    "trl>=0.8",
    "datasets>=2.18",
    "bitsandbytes>=0.43",
]

[project.scripts]
pratibmb = "pratibmb.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pratibmb"]
