[package]
name = "pratibmb-desktop"
version = "0.2.0"
description = "Chat with your 10-years-younger self. 100% local."
authors = ["Tapas"]
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
